# differential-drive-drake

./: BUILD.bazel  README.md  robot_control.cc  robot_control.h  robot_simulation.cc  robot_simulation.h  soccer_run.cc
models/: differential_drive.urdf
