# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_library",
)
load("//tools/install:install_data.bzl", "install_data")
load("//tools/lint:lint.bzl", "add_lint_tests")

filegroup(
    name = "models",
    srcs = glob([
        "**/*.obj",
        "**/*.sdf",
        "**/*.urdf",
    ]),
    visibility = ["//visibility:public"]
)

drake_cc_library(
    name="robot_simulation",
    hdrs=["robot_simulation.h"],
    srcs=["robot_simulation.cc"],
    visibility = ["//visibility:public"],
    deps=[
        "//systems/framework:leaf_system",
        "//attic/multibody:rigid_body_tree",
        "//attic/multibody/parsers",
        "//geometry:geometry_visualization",
        "//math:geometric_transform",
        "//geometry:scene_graph",
        "//common:essential",
    ],
)

drake_cc_library(
    name="robot_control",
    hdrs=["robot_control.h"],
    srcs=["robot_control.cc"],
    visibility = ["//visibility:public"],
    deps=[
        "//systems/framework:leaf_system",
        "//common:essential",
    ]
)

drake_cc_binary(
    name="soccer_run",
    srcs=["soccer_run.cc"],
    data=[":models"],
    deps=[
        ":robot_simulation",
        ":robot_control",
        "//systems/lcm:lcm_interface_system",
        "//systems/framework:diagram",
        "//systems/framework:diagram_builder",
        "//attic/multibody/parsers",
        "//systems/analysis:simulator",
        "//geometry:scene_graph",
        "//systems/primitives:signal_logger",
        "//systems/primitives:constant_vector_source",
        "//systems/primitives:constant_value_source",
        "//attic/multibody/rigid_body_plant:drake_visualizer",
        "//multibody/parsing",
    ],
)